# libconfig

./: LICENSE  Makefile.am  README.md  build-parser.sh  config.pc.in  configure.ac
projects/xcode/libconfig.xcodeproj/: project.pbxproj
projects/xcode/libconfig.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/xcode/libconfig.xcodeproj/project.xcworkspace/xcshareddata/: libconfig.xccheckout
projects/xcode/libconfig.xcodeproj/project.xcworkspace/xcuserdata/manvscode.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/libconfig.xcodeproj/xcuserdata/manvscode.xcuserdatad/xcschemes/: libconfig.xcscheme  xcschememanagement.plist
src/: Makefile.am  build-parser.sh  config-lexer.c  config-lexer.h  config-lexer.l  config-parser.c  config-parser.h  config-parser.y  config-private.h  config.c  config.h  libconfig-config.h  libconfig-config.h.in
tests/: Makefile.am  test-config.c  test.c  test.cfg
